[package]
name = "stable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
base64 = "0.22.1"
borsh = { version = "*", features=["derive"] }
borsh-derive = { version = "1.0.0-alpha.6" }
dotenv = "0.15.0"
hex = "0.4.3"
http-body-util = "0.1.2"
k256 = { version = "0.13.3", features =["ecdsa-core"] }
lazy_static = "1.5.0"
secp256k1 = { version = "0.29.1", features = ["rand"]}
serde_json = "1.0.128"
sha2 = "=0.11.0-pre.4"
sqlx = {git = "https://github.com/launchbadge/sqlx", default_features = false, features = ["postgres", "sqlite", "runtime-tokio", "macros", "migrate", "time", "tls-rustls"] }
thiserror = "1.0.63"
tower = "0.5.1"
tower-http = {version = "0.5.2", features = ["cors"]}

[dev-dependencies]
tower = { version = "0.5.1", features = ["util"] }
