[package]
name = "stable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = "0.8.0"
axum-server = "0.7.1"
bech32 = "0.11.0"
bitcoin = "0.32.2"
bitcoin-io = "0.1.2"
borsh = { version = "*", features=["derive"] }
borsh-derive = { version = "1.0.0-alpha.6" }
dotenv = "0.15.0"
env_logger = "0.11.5"
hex = "0.4.3"
k256 = { version = "0.13.3", features =["ecdsa-core"] }
lazy_static = "1.5.0"
log = "0.4.22"
reqwest = { version ="0.12.7", features = ["json"]}
rust_decimal = "1.36.0"
rustls-acme = {version = "*", features=["axum"]}
secp256k1 = { version = "0.29.1", features = ["rand"]}
serde_json = "1.0.128"
sha2 = "=0.11.0-pre.4"
sqlx = {version = "0.8.2", features = ["postgres", "sqlite", "runtime-tokio", "macros", "migrate", "time", "tls-rustls", "ipnetwork"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tower = "0.5.1"
tower-http = {version = "0.5.2", features = ["cors", "fs"]}

[dev-dependencies]
http-body-util = "0.1.2"
httpmock = "0.8.0-alpha.1"
tower = { version = "0.5.1", features = ["util"] }
